# moocs-slide-dl

./: .gitignore  README.md  pyproject.toml
src/: login.py  slide_dl.py  utils.py
